# Voronoi_delaunay_IMACS2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install_SDL.bat  main.cpp
docs/: terminal.txt
src/: SDL2_gfxPrimitives.c  application_ui.cpp  application_ui.h  main.cpp
